<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="singh.saurbh.godogs.SinglePostDisplay">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"/>

    <item android:id="@+id/delete_for_singal_post"
        android:title="@string/delete_post"
        android:orderInCategory="101"/>

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:title="Refresh"
        android:orderInCategory="102"
        android:icon="@android:drawable/ic_popup_sync" />

    <item
        android:id="@+id/action_logOut"
        android:title="@string/logout"
        android:orderInCategory="103"/>
</menu>
